In the search result rows, put the metadata fields in <p>'s, which fixes spacing issues.

--- a/static/src/stylesheets/search.less
+++ b/static/src/stylesheets/search.less
@@ -114,4 +114,8 @@
     color: @brand-primary;
   }
 
+  p {
+    margin-bottom: 2px;
+  }
+
 }
